Fixed buttons layout issue, modularized parts of code

--- a/sidebar-v2/css/leaflet-sidebar.css
+++ b/sidebar-v2/css/leaflet-sidebar.css
@@ -154,11 +154,11 @@
       .leaflet-sidebar.leaflet-touch {
         border: 2px solid rgba(0, 0, 0, 0.2); } }
 
-@media (min-width: 768px) {
+@media (min-width: 100px) {
   .leaflet-sidebar-left ~ .leaflet-control-container .leaflet-left {
     transition: left 500ms; } }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 100px) and (max-width: 991px) {
   .leaflet-sidebar-left ~ .leaflet-control-container .leaflet-left {
     left: 315px; } }
 
@@ -170,7 +170,7 @@
   .leaflet-sidebar-left ~ .leaflet-control-container .leaflet-left {
     left: 470px; } }
 
-@media (min-width: 768px) {
+@media (min-width: 100px) {
   .leaflet-sidebar-left.collapsed ~ .leaflet-control-container .leaflet-left {
     left: 50px; } }
 
